将虚拟线程特性移动到另一分支